--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/language-service": "~11.2.0",
     "@ionic/angular-toolkit": "^3.1.1",
     "@ionic/lab": "3.2.10",
+    "@types/google.maps": "^3.45.6",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
