--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Travel",
+  "name": "travel",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
