--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@ionic-native/camera": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/facebook": "^5.36.0",
     "@ionic-native/google-plus": "^5.36.0",
@@ -51,6 +52,7 @@
     "cordova-android": "^9.1.0",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
+    "cordova-plugin-camera": "^5.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook-connect": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -102,6 +104,9 @@
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "251518684476-md8hta1ij3eqceu459mumbflf48n5l8v.apps.googleusercontent.com",
         "PLAY_SERVICES_VERSION": "15.0.1"
+      },
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
       }
     },
     "platforms": [
