--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/google-plus": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage-angular": "^3.0.6",
+    "@sendgrid/mail": "^7.5.0",
     "angular-code-input": "^1.5.0",
     "cordova-plugin-googleplus": "8.5.2",
     "rxjs": "~6.6.0",
